# poolcontrolpy

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci-cd.yml  ci.yml
docs/: Makefile  conf.py  example.ipynb  make.bat  requirements.txt
src/poolcontrolpy/: __init__.py  exceptions.py  poolcontrolpy.py
tests/: config_good.json  test_handler.py  test_poolcontrolpy.py
