[tool.poetry]
name = "poolcontrolpy"
version = "0.0.0"
description = "Package for accessing nodejs-poolController"
authors = ["Kevin Robinson"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.8.1"
asyncio = "^3.4.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
myst-nb = "^0.16.0"
sphinx-autoapi = "^1.8.4"
sphinx-rtd-theme = "^1.0.0"
pytest-aiohttp = "^1.0.4"
pylama = "^8.3.8"
python-semantic-release = "^7.29.6"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.semantic_release]
version_variable = "pyproject.toml:version" # version location
branch = "main"                             # branch to make releases of
changelog_file = "CHANGELOG.md"             # changelog file
build_command = "poetry build"              # build dists
dist_path = "dist/"                         # where to put dists
upload_to_release = true                    # auto-create GitHub release
upload_to_pypi = false                      # don't auto-upload to PyPI
remove_dist = false                         # don't remove dists
patch_without_tag = true                    # patch release by default

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
